--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=8080
 DEV_MODE=development
-MONGO_URI=mongodb://localhost:27017
+MONGO_URI=mongodb://localhost:27017/Ecommerce
 
 JWT_SECRET=fuadabdelaalisecret
 JWT_EXPIRES_IN=30d
