--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.14.0",
     "axios": "^1.13.2",
     "moment": "^2.30.1",
     "react": "^18.3.1",
